--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colourDayThemeBg"
+    android:background="?attr/MainBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.screens.NotesFragment">
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
+        android:backgroundTint="?attr/cardView"
         android:layout_marginRight ="10dp"
         android:layout_marginLeft ="10dp"
         app:cardCornerRadius="10dp"
@@ -48,10 +49,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:backgroundTint="@color/white"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="?attr/cardView"
         android:contentDescription="TODO"
         android:src="@drawable/ic_add"
         app:borderWidth="0dp"
+        android:elevation="300dp"
         app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton2"
         app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,11 +63,11 @@
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
-        android:layout_marginTop= "20dp"
-        android:layout_marginRight="20dp"
-        app:borderWidth="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="?attr/cardView"
         android:src="@drawable/ic_settings"
+        app:borderWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,10 +77,11 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/note_item_template" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
