--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#31456A</color>
+    <color name="purple_700">#31456A</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colourDayThemeBg">#DFE4E9</color>
+    <color name="colourLightThemeBg">#DFE4E9</color>
+    <color name="colorDarkThemeBg">#202020</color>
+    <color name="darkCard">#A9A9A9</color>
 </resources>
